{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 2468,
  "lineage": "9cf626d4-2d6c-c706-b495-c55df97ca76a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dockerized_petclinic_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:289002034845:instance/i-01bae55640992c548",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bae55640992c548",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yoba",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01466abb30d143759",
            "private_dns": "ip-172-31-18-60.us-east-2.compute.internal",
            "private_ip": "172.31.18.60",
            "public_dns": "ec2-18-219-34-37.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.34.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c6667daa218f4ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "petclinic_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4f94db0d9455817",
            "tags": {
              "Name": "Spring-Petclinic",
              "Owner": "Yevhenii Kushnir"
            },
            "tags_all": {
              "Name": "Spring-Petclinic",
              "Owner": "Yevhenii Kushnir"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc65beda0d90c914"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:289002034845:security-group/sg-0dc65beda0d90c914",
            "description": "Spring-Petclinic Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc65beda0d90c914",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "petclinic_sg",
            "name_prefix": "",
            "owner_id": "289002034845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic_sg"
            },
            "tags_all": {
              "Name": "petclinic_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feaa8cb8238c307d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "petclinic_rds_login",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4056434976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dc65beda0d90c914",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.petclinic_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "petclinic_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "petclinic_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:289002034845:vpc/vpc-0546ed84ed7f12f6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b8536963bb6913e7",
            "default_route_table_id": "rtb-018578a474805a364",
            "default_security_group_id": "sg-01ae4bd4d6cc013e9",
            "dhcp_options_id": "dopt-f7c5869c",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0546ed84ed7f12f6a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-018578a474805a364",
            "owner_id": "289002034845",
            "tags": {
              "Name": "PetClinicVPC"
            },
            "tags_all": {
              "Name": "PetClinicVPC"
            }
          }
        }
      ]
    }
  ]
}